// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PDF text+position snapshot minimal fixture 1`] = `
[
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "Others",
    "x": 155.7,
    "y": 174.8,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": ":",
    "x": 202.7,
    "y": 174.8,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "12mm iron peg in concrete",
    "x": 212.7,
    "y": 174.8,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 9,
    "text": "BEACON DESCRIPTION",
    "x": 155.7,
    "y": 188.8,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "(Land Surveyor, Zim)",
    "x": 1040.3,
    "y": 197.8,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 10,
    "text": "Test Surveyor",
    "x": 1049.3,
    "y": 211.1,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "Surveyed in June 2026 by me",
    "x": 1023,
    "y": 260.8,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 8.6,
    "text": "C",
    "x": 247.5,
    "y": 299.7,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 8.6,
    "text": "D",
    "x": 1208.5,
    "y": 307.8,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 11,
    "text": "2",
    "x": 486.3,
    "y": 592.9,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 11,
    "text": "1",
    "x": 963.5,
    "y": 592.9,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "DA",
    "x": 172.2,
    "y": 597.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "0.00",
    "x": 212,
    "y": 598.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "180°00'00"",
    "x": 260.1,
    "y": 598.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "A",
    "x": 335.2,
    "y": 598.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "+50000.00",
    "x": 376.8,
    "y": 598.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "+2200000.00",
    "x": 439.3,
    "y": 598.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "CD",
    "x": 171.7,
    "y": 609.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "0.00",
    "x": 212,
    "y": 610.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "270°00'00"",
    "x": 260.1,
    "y": 610.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "D",
    "x": 335,
    "y": 610.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "+50000.00",
    "x": 376.8,
    "y": 610.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "+2200060.00",
    "x": 439.3,
    "y": 610.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "BC",
    "x": 172,
    "y": 621.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "0.00",
    "x": 212,
    "y": 622.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "0°00'00"",
    "x": 270.1,
    "y": 622.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "C",
    "x": 335,
    "y": 622.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "+50100.00",
    "x": 376.8,
    "y": 622.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "+2200060.00",
    "x": 439.3,
    "y": 622.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 7,
    "text": "2",
    "x": 851.7,
    "y": 626.8,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 7,
    "text": "3000",
    "x": 893.4,
    "y": 626.8,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "AB",
    "x": 172.2,
    "y": 633.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "0.00",
    "x": 212,
    "y": 634.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "90°00'00"",
    "x": 265.1,
    "y": 634.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "B",
    "x": 335.2,
    "y": 634.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "+50100.00",
    "x": 376.8,
    "y": 634.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "+2200000.00",
    "x": 439.3,
    "y": 634.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 7,
    "text": "1",
    "x": 851.7,
    "y": 641.8,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 7,
    "text": "3000",
    "x": 893.4,
    "y": 641.8,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 9,
    "text": "SIDES",
    "x": 164.7,
    "y": 648.4,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 9,
    "text": "Metres",
    "x": 206.2,
    "y": 648.4,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 9,
    "text": "DIRECTION",
    "x": 251,
    "y": 648.4,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 9,
    "text": "Constants",
    "x": 316.2,
    "y": 648.4,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 9,
    "text": "+ 0.00",
    "x": 385.6,
    "y": 648.4,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 9,
    "text": "+ 0.00",
    "x": 453.1,
    "y": 648.4,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 6,
    "text": "METRES",
    "x": 888.7,
    "y": 655.5,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 6,
    "text": "NUMBER",
    "x": 978,
    "y": 657.5,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 6,
    "text": "DATE",
    "x": 1020.9,
    "y": 657.5,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 6,
    "text": "No.",
    "x": 848.8,
    "y": 659.5,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 6,
    "text": "NUMBER",
    "x": 938,
    "y": 659.5,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 6,
    "text": "GENERAL",
    "x": 1056.5,
    "y": 659.5,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 6,
    "text": "SQUARE",
    "x": 888.5,
    "y": 662.5,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "Y",
    "x": 370.7,
    "y": 664.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "Metres",
    "x": 419.5,
    "y": 664.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "X",
    "x": 489.7,
    "y": 664.4,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 6,
    "text": "STAND",
    "x": 843.6,
    "y": 666.5,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 6,
    "text": "DIAGRAM",
    "x": 937,
    "y": 666.5,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 6,
    "text": "SURVEYOR-",
    "x": 1053.7,
    "y": 666.5,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 6,
    "text": "DEED",
    "x": 1000.3,
    "y": 668.5,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 6,
    "text": "AREAS",
    "x": 890.7,
    "y": 669.5,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 9,
    "text": "OUTSIDE FIGURE DATA",
    "x": 209.7,
    "y": 677.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "System : Lo 31°",
    "x": 401.6,
    "y": 678.4,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 9,
    "text": "SCHEDULE OF AREAS",
    "x": 916.9,
    "y": 684.4,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 9,
    "text": "CO-ORDINATES",
    "x": 398.9,
    "y": 689.4,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 9,
    "text": "SCALE 1:400",
    "x": 718.9,
    "y": 859.9,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 9,
    "text": "METRES",
    "x": 914.1,
    "y": 878.9,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 8.6,
    "text": "B",
    "x": 241.5,
    "y": 880.7,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 8.6,
    "text": "A",
    "x": 1201.6,
    "y": 888.8,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 9,
    "text": "0",
    "x": 585.3,
    "y": 904.9,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 9,
    "text": "10",
    "x": 688.9,
    "y": 904.9,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 9,
    "text": "20",
    "x": 795,
    "y": 904.9,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 9,
    "text": "30",
    "x": 901.1,
    "y": 904.9,
  },
  {
    "font": "g_d0_f2",
    "page": 1,
    "size": 8,
    "text": "Vide diagram S.G. No. ........................ annexed to ........................ No. ........................",
    "x": 400.2,
    "y": 932.3,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "situate in the district of Test District.",
    "x": 400.2,
    "y": 948,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 10,
    "text": "T",
    "x": 1199.6,
    "y": 952.6,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 10,
    "text": "N",
    "x": 1211.6,
    "y": 952.6,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "The figure AB, BC, CD, DA, AB represents Test Township comprising 2 stands numbered 1 - 2 and public places being A portion of Test Township,",
    "x": 400.2,
    "y": 960.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "Date ............................",
    "x": 165.7,
    "y": 968.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 9,
    "text": "For Surveyor General",
    "x": 212.8,
    "y": 980.4,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 8,
    "text": "General Plan",
    "x": 1293.6,
    "y": 983.8,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 8,
    "text": "1.",
    "x": 1270.2,
    "y": 993.1,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 8,
    "text": "Dispensation Certificate No. .................. relates to this",
    "x": 1293.6,
    "y": 993.1,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 10,
    "text": "Stands 1 - 2 Test Township",
    "x": 636.5,
    "y": 997.6,
  },
  {
    "font": "g_d0_f2",
    "page": 1,
    "size": 10,
    "text": "of",
    "x": 696,
    "y": 1009.6,
  },
  {
    "font": "g_d0_f3",
    "page": 1,
    "size": 12,
    "text": "Approved",
    "x": 230.3,
    "y": 1011.2,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 7,
    "text": "No.",
    "x": 1267.9,
    "y": 1012.3,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 7,
    "text": "STATEMENT",
    "x": 1293.6,
    "y": 1012.3,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 7,
    "text": "Date",
    "x": 1536.1,
    "y": 1012.3,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 7,
    "text": "Surveyor-General",
    "x": 1605.8,
    "y": 1012.3,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 16,
    "text": "GENERAL PLAN",
    "x": 637,
    "y": 1023.3,
  },
  {
    "font": "g_d0_f1",
    "page": 1,
    "size": 10,
    "text": "ENDORSEMENTS",
    "x": 1429,
    "y": 1036.6,
  },
]
`;

exports[`PDF text+position snapshot realistic fixture 1`] = `
[
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "Others",
    "x": 155.7,
    "y": 177.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": ":",
    "x": 202.7,
    "y": 177.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "12mm iron peg in concrete",
    "x": 212.7,
    "y": 177.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "M1, M2, M3",
    "x": 155.7,
    "y": 190.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": ":",
    "x": 223.2,
    "y": 190.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "Not beaconed",
    "x": 233.2,
    "y": 190.8,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 9,
    "text": "BEACON DESCRIPTION",
    "x": 155.7,
    "y": 204.8,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 8,
    "text": "C",
    "x": 185.8,
    "y": 268.1,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 8,
    "text": "D",
    "x": 1152.7,
    "y": 268.1,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "(Land Surveyor, Zim)",
    "x": 864.3,
    "y": 269.8,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 8.6,
    "text": "M",
    "x": 429.9,
    "y": 275.8,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 8.6,
    "text": "L",
    "x": 669.6,
    "y": 275.8,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 8.6,
    "text": "K",
    "x": 907.9,
    "y": 275.8,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 10,
    "text": "C. Paradzayi",
    "x": 876.9,
    "y": 283.1,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 8.6,
    "text": "M3",
    "x": 179.8,
    "y": 283.9,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "Surveyed in June 2026 by me",
    "x": 847,
    "y": 332.8,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 11,
    "text": "111",
    "x": 305,
    "y": 386,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 11,
    "text": "110",
    "x": 543.7,
    "y": 386,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 11,
    "text": "109",
    "x": 782.4,
    "y": 386,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 11,
    "text": "108",
    "x": 1021.2,
    "y": 386,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 8.6,
    "text": "M2",
    "x": 179.8,
    "y": 490.8,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 8.6,
    "text": "J",
    "x": 443.8,
    "y": 493.9,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 8.6,
    "text": "I",
    "x": 682.5,
    "y": 493.9,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 8.6,
    "text": "H",
    "x": 921.2,
    "y": 493.9,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 11,
    "text": "107",
    "x": 305,
    "y": 592.9,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 11,
    "text": "106",
    "x": 543.7,
    "y": 592.9,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 11,
    "text": "105",
    "x": 782.4,
    "y": 592.9,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 11,
    "text": "104",
    "x": 1021.2,
    "y": 592.9,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "Date ............................",
    "x": 165.7,
    "y": 608.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "For Surveyor General",
    "x": 212.8,
    "y": 620.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "111",
    "x": 991.8,
    "y": 628.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "4875",
    "x": 1037.4,
    "y": 628.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "110",
    "x": 991.8,
    "y": 643.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "4875",
    "x": 1037.4,
    "y": 643.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 12,
    "text": "Approved",
    "x": 230.3,
    "y": 651.7,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "109",
    "x": 991.8,
    "y": 658.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "4875",
    "x": 1037.4,
    "y": 658.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "108",
    "x": 991.8,
    "y": 673.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "4875",
    "x": 1037.4,
    "y": 673.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "107",
    "x": 991.8,
    "y": 688.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "4875",
    "x": 1037.4,
    "y": 688.8,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 8.6,
    "text": "M1",
    "x": 179.8,
    "y": 697.7,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 8.6,
    "text": "G",
    "x": 443.8,
    "y": 700.8,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 8.6,
    "text": "F",
    "x": 682.5,
    "y": 700.8,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 8.6,
    "text": "E",
    "x": 921.2,
    "y": 700.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "106",
    "x": 991.8,
    "y": 703.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "4875",
    "x": 1037.4,
    "y": 703.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "105",
    "x": 991.8,
    "y": 718.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "4875",
    "x": 1037.4,
    "y": 718.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "104",
    "x": 991.8,
    "y": 733.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "4875",
    "x": 1037.4,
    "y": 733.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "103",
    "x": 991.8,
    "y": 748.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "4875",
    "x": 1037.4,
    "y": 748.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "102",
    "x": 991.8,
    "y": 763.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "4875",
    "x": 1037.4,
    "y": 763.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "DA",
    "x": 172.2,
    "y": 773.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "0.00",
    "x": 212,
    "y": 774.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "180°00'00"",
    "x": 260.1,
    "y": 774.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "A",
    "x": 335.2,
    "y": 774.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "+50000.00",
    "x": 376.8,
    "y": 774.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "+2200000.00",
    "x": 439.3,
    "y": 774.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "101",
    "x": 991.8,
    "y": 778.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "4875",
    "x": 1037.4,
    "y": 778.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "CD",
    "x": 171.7,
    "y": 785.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "0.00",
    "x": 212,
    "y": 786.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "270°00'00"",
    "x": 260.1,
    "y": 786.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "D",
    "x": 335,
    "y": 786.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "+50000.00",
    "x": 376.8,
    "y": 786.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "+2200200.00",
    "x": 439.3,
    "y": 786.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "100",
    "x": 991.8,
    "y": 793.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 7,
    "text": "4875",
    "x": 1037.4,
    "y": 793.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "BC",
    "x": 172,
    "y": 797.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "0.00",
    "x": 212,
    "y": 798.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "0°00'00"",
    "x": 270.1,
    "y": 798.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "C",
    "x": 335,
    "y": 798.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "+50300.00",
    "x": 376.8,
    "y": 798.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "+2200200.00",
    "x": 439.3,
    "y": 798.4,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 11,
    "text": "103",
    "x": 305,
    "y": 799.8,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 11,
    "text": "102",
    "x": 543.7,
    "y": 799.8,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 11,
    "text": "101",
    "x": 782.4,
    "y": 799.8,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 11,
    "text": "100",
    "x": 1020.3,
    "y": 799.8,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 6,
    "text": "METRES",
    "x": 1032.7,
    "y": 807.5,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "AB",
    "x": 172.2,
    "y": 809.4,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 6,
    "text": "NUMBER",
    "x": 1122,
    "y": 809.5,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 6,
    "text": "DATE",
    "x": 1164.9,
    "y": 809.5,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "0.00",
    "x": 212,
    "y": 810.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "90°00'00"",
    "x": 265.1,
    "y": 810.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "B",
    "x": 335.2,
    "y": 810.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "+50300.00",
    "x": 376.8,
    "y": 810.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "+2200000.00",
    "x": 439.3,
    "y": 810.4,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 6,
    "text": "No.",
    "x": 992.8,
    "y": 811.5,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 6,
    "text": "NUMBER",
    "x": 1082,
    "y": 811.5,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 6,
    "text": "GENERAL",
    "x": 1200.5,
    "y": 811.5,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 6,
    "text": "SQUARE",
    "x": 1032.5,
    "y": 814.5,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 6,
    "text": "STAND",
    "x": 987.6,
    "y": 818.5,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 6,
    "text": "DIAGRAM",
    "x": 1081,
    "y": 818.5,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 6,
    "text": "SURVEYOR-",
    "x": 1197.7,
    "y": 818.5,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 6,
    "text": "DEED",
    "x": 1144.3,
    "y": 820.5,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 6,
    "text": "AREAS",
    "x": 1034.7,
    "y": 821.5,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 9,
    "text": "SIDES",
    "x": 164.7,
    "y": 824.4,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 9,
    "text": "Metres",
    "x": 206.2,
    "y": 824.4,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 9,
    "text": "DIRECTION",
    "x": 251,
    "y": 824.4,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 9,
    "text": "Constants",
    "x": 316.2,
    "y": 824.4,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 9,
    "text": "+ 0.00",
    "x": 385.6,
    "y": 824.4,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 9,
    "text": "+ 0.00",
    "x": 453.1,
    "y": 824.4,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 9,
    "text": "SCHEDULE OF AREAS",
    "x": 1060.9,
    "y": 836.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "Y",
    "x": 370.7,
    "y": 840.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "Metres",
    "x": 419.5,
    "y": 840.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "X",
    "x": 489.7,
    "y": 840.4,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 9,
    "text": "OUTSIDE FIGURE DATA",
    "x": 209.7,
    "y": 853.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "System : Lo 31°",
    "x": 401.6,
    "y": 854.4,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 9,
    "text": "SCALE 1:1250",
    "x": 677.5,
    "y": 859.9,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 9,
    "text": "CO-ORDINATES",
    "x": 398.9,
    "y": 865.4,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 9,
    "text": "METRES",
    "x": 822.1,
    "y": 878.9,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 8.6,
    "text": "B",
    "x": 185.6,
    "y": 904.6,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 9,
    "text": "0",
    "x": 599.4,
    "y": 904.9,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 9,
    "text": "20",
    "x": 667.7,
    "y": 904.9,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 9,
    "text": "40",
    "x": 738.4,
    "y": 904.9,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 9,
    "text": "60",
    "x": 809.1,
    "y": 904.9,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 8.6,
    "text": "A",
    "x": 1145.7,
    "y": 912.7,
  },
  {
    "font": "g_d1_f2",
    "page": 1,
    "size": 8,
    "text": "Vide diagram S.G. No. ........................ annexed to ........................ No. ........................",
    "x": 400.2,
    "y": 932.3,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "Township, situate in the district of Bulawayo.",
    "x": 400.2,
    "y": 948,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 10,
    "text": "T",
    "x": 1199.6,
    "y": 952.6,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 10,
    "text": "N",
    "x": 1211.6,
    "y": 952.6,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 9,
    "text": "The figure AB, BC, CD, DA, AB represents Maglas Township comprising 12 stands numbered 100 - 111 and public places being A portion of Maglas",
    "x": 400.2,
    "y": 960.4,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 8,
    "text": "General Plan",
    "x": 1293.6,
    "y": 983.8,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 8,
    "text": "1.",
    "x": 1270.2,
    "y": 993.1,
  },
  {
    "font": "g_d1_f3",
    "page": 1,
    "size": 8,
    "text": "Dispensation Certificate No. .................. relates to this",
    "x": 1293.6,
    "y": 993.1,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 10,
    "text": "Stands 100 - 111 Maglas Township",
    "x": 618.4,
    "y": 997.6,
  },
  {
    "font": "g_d1_f2",
    "page": 1,
    "size": 10,
    "text": "of",
    "x": 696,
    "y": 1009.6,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 7,
    "text": "No.",
    "x": 1267.9,
    "y": 1012.3,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 7,
    "text": "STATEMENT",
    "x": 1293.6,
    "y": 1012.3,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 7,
    "text": "Date",
    "x": 1536.1,
    "y": 1012.3,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 7,
    "text": "Surveyor-General",
    "x": 1605.8,
    "y": 1012.3,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 16,
    "text": "GENERAL PLAN",
    "x": 637,
    "y": 1023.3,
  },
  {
    "font": "g_d1_f1",
    "page": 1,
    "size": 10,
    "text": "ENDORSEMENTS",
    "x": 1429,
    "y": 1036.6,
  },
]
`;
